-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 4.13.3, Qt Creator 4.14.0
-
None
-
I'm running Linux but I think this issue is platform independent
-
-
ade5b44297f0b2771ee1965966e876ec70db2336 (qt-creator/qt-creator/master)
When the Debugger is (mis-)configured to hide every view, the "Reset to default layout" menu does not actually reset the default layout, because the Editor remains hidden.
Steps to reproduce:
- Create a new C++ "hello world" project.
- Place 1 breakpoint
- Start debugging
- Click Views -> uncheck all of them
- Click Views -> Reset to default layout
Expected outcome: the layout is restored to default, including the editor.
Actual outcome: the editor remains hidden.
| For Gerrit Dashboard: QTCREATORBUG-25314 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 333483,2 | Debugger: Show central widget by default when resetting view layout | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |