Debugger: Show central widget by default when resetting view layout

Fixes: QTCREATORBUG-25314
Change-Id: Id827c71159b4d23de2ab5adf14521c758f8489ef
Reviewed-by: David Schulz <david.schulz@qt.io>