src/plugins/debugger/debuggermainwindow.cpp
@@ -573,8 +573,9 @@ void DebuggerMainWindowPrivate::resetCurrentPerspective()
 {
     QTC_ASSERT(m_currentPerspective, return);
     cleanDocks();
-    m_currentPerspective->d->resetPerspective();
     setCentralWidget(m_currentPerspective->d->m_centralWidget);
+    q->showCentralWidget(true);
+    m_currentPerspective->d->resetPerspective();
 }
 
 void DebuggerMainWindowPrivate::setCentralWidget(QWidget *widget)
